--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
+# Ignore all .csv files as well as txt, as there is data of participants
+*.csv
+*.txt
+
+# Ignore all .png files
+*.png
+
 
 # C extensions
 *.so
